--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Deployable",
+  "name": "deployable",
   "version": "1.0.0",
   "private": true,
-  "description": "Approve deployments with comment reactions",
+  "description": "Approve deployments via signed comments from maintainers",
   "author": "Balena",
-  "license": "ISC",
-  "homepage": "https://github.com//",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/balena-io-experimental/deployable",
   "keywords": [
     "probot",
     "github",
