--- a/app.yml
+++ b/app.yml
@@ -20,10 +20,11 @@ default_events:
   # - delete
   # - deployment
   # - deployment_status
+  - deployment_protection_rule
   # - fork
   # - gollum
-  # - issue_comment
-  - issues
+  - issue_comment
+  # - issues
 # - label
 # - milestone
 # - member
@@ -66,7 +67,7 @@ default_permissions:
 
   # Deployments and deployment statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-deployments
-  # deployments: read
+  deployments: read
 
   # Issues and related comments, assignees, labels, and milestones.
   # https://developer.github.com/v3/apps/permissions/#permission-on-issues
@@ -82,7 +83,7 @@ default_permissions:
 
   # Pull requests and related comments, assignees, labels, milestones, and merges.
   # https://developer.github.com/v3/apps/permissions/#permission-on-pull-requests
-  # pull_requests: read
+  pull_requests: write
 
   # Manage the post-receive hooks for a repository.
   # https://developer.github.com/v3/apps/permissions/#permission-on-repository-hooks
@@ -102,7 +103,7 @@ default_permissions:
 
   # Organization members and teams.
   # https://developer.github.com/v3/apps/permissions/#permission-on-members
-  # members: read
+  members: read
 
   # View and manage users blocked by the organization.
   # https://developer.github.com/v3/apps/permissions/#permission-on-organization-user-blocking
@@ -124,13 +125,13 @@ default_permissions:
   # https://developer.github.com/v3/apps/permissions/
   # organization_administration: read
 # The name of the GitHub App. Defaults to the name specified in package.json
-# name: My Probot App
+name: Deployable
 
 # The homepage of your GitHub App.
-# url: https://example.com/
+url: https://github.com/balena-io-experimental/deployable
 
 # A description of the GitHub App.
-# description: A description of my awesome app
+description: Approve deployments via signed comments from maintainers
 
 # Set to true when your GitHub App is available to the public or false when it is only accessible to the owner of the app.
 # Default: true
