--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deployable",
   "version": "1.0.0",
   "private": true,
-  "description": "Approve deployments via signed comments from maintainers",
+  "description": "Approve deployments via comments from maintainers",
   "author": "Balena",
   "license": "Apache-2.0",
   "homepage": "https://github.com/balena-io-experimental/deployable",
@@ -14,17 +14,23 @@
   "scripts": {
     "build": "tsc",
     "start": "probot run ./lib/index.js",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "balena-lint src/ test/ && tsc --noEmit --project .",
+    "lint-fix": "balena-lint --fix src/ test/",
+    "prepare": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "dependencies": {
-    "probot": "^13.0.1"
+    "probot": "^13.0.1",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@balena/lint": "^9.1.2",
     "@types/node": "^20.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "nock": "^14.0.0-beta.5",
     "smee-client": "^2.0.0",
-    "vitest": "^1.3.1",
-    "typescript": "^5.3.3"
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">= 18"
