--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,14 @@
 {
+	"extends": "./tsconfig.build",
 	"compilerOptions": {
-		"module": "NodeNext",
-		"target": "es2022",
-		"declaration": true,
-		"outDir": "lib/",
-		"rootDir": "src/",
-		"strict": true,
-		"strictPropertyInitialization": false,
-		"strictFunctionTypes": false,
-		"useUnknownInCatchVariables": false,
-		"noImplicitThis": false,
-		"noUnusedParameters": true,
-		"noUnusedLocals": true,
-		"preserveConstEnums": true,
-		"sourceMap": true,
-		"skipLibCheck": true,
-		"resolveJsonModule": true,
-		"esModuleInterop": true
+		"rootDir": "./",
+		"allowJs": true,
+		"checkJs": true
 	},
 	"include": [
-		"src/**/*.ts"
-	],
-	"exclude": [
-		"node_modules",
-		"**/*.d.ts"
-	],
-	"ts-node": {
-		"esm": true,
-		"experimentalResolver": true,
-		"experimentalTsImportSpecifiers": true,
-		"transpileOnly": true
-	}
+		"src/**/*.ts",
+		"*.js",
+		"*.ts",
+		"test/**/*.ts"
+	]
 }
