Publish docker images to ghcr.io via flowzone
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -47,3 +47,5 @@ jobs:
         {
           "environment": ["test"]
         }
+      docker_images:
+        ghcr.io/balena-io-experimental/deployable
