--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "tsc",
     "start": "probot run ./lib/index.js",
-    "test": "vitest",
+    "test": "vitest --coverage",
     "lint": "balena-lint src/ test/ && tsc --noEmit --project .",
     "lint-fix": "balena-lint --fix src/ test/",
     "prepare": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
@@ -26,11 +26,12 @@
   "devDependencies": {
     "@balena/lint": "^9.1.2",
     "@types/node": "^20.0.0",
+    "@vitest/coverage-v8": "^2.1.5",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "nock": "^14.0.0-beta.5",
     "smee-client": "^2.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^2.1.5"
   },
   "engines": {
     "node": ">= 18"
