Run deployments on more events for testing
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -47,5 +47,9 @@ jobs:
         {
           "environment": ["test"]
         }
+      custom_finalize_matrix: >
+        {
+          "environment": ["test"]
+        }
       docker_images:
         ghcr.io/balena-io-experimental/deployable
