--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
     types: [opened, synchronize, closed]
     branches: [main, master, develop]
   push:
+    branches: [main, master, develop]
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
 
