Add more documentation for env vars
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ LOG_LEVEL=debug
 
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=
+
+# A comma-separated list of GitHub user IDs to bypass the approval process.
+# For users, you can find the ID by visiting `https://api.github.com/users/<username>`
+# For apps, you can find the ID by visiting `https://api.github.com/users/<app-name>%5Bbot%5D`
+BYPASS_ACTORS=
