--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -53,3 +53,8 @@ jobs:
         }
       docker_images:
         ghcr.io/product-os/deploynaut
+      docker_runs_on: >
+        {
+          "linux/amd64": ["self-hosted","X64"],
+          "linux/arm64": ["self-hosted","ARM64"]
+        }
