--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "probot-app"
   ],
   "scripts": {
-    "build": "tsc",
-    "start": "probot run ./lib/src/index.js",
+    "clean": "rimraf lib",
+    "build": "tsc --project tsconfig.release.json",
+    "start": "probot run ./lib/index.js",
     "test": "npm run lint && vitest --coverage",
-    "lint": "balena-lint src/ test/ && tsc --noEmit --project .",
-    "lint-fix": "balena-lint --fix src/ test/",
+    "lint": "balena-lint src tests && tsc --noEmit --project .",
+    "lint-fix": "balena-lint --fix src tests",
     "prepare": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "nock": "^14.0.0-beta.5",
+    "rimraf": "^6.0.1",
     "smee-client": "^2.0.0",
     "vitest": "^2.1.5"
   },
