Fix approval of pull request target workflows with same branch
The previous pending workflow query was based on the reviewed
commit SHA but this would not return any pull_request_target events.

This change updates the filter to find all pending workflows based
on the branch, then reduces the list further by approved commits
or event type.

The events must already be in a pending state before the approval
is received, this is unchanged.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/tests/compose/docker-compose.yml
+++ b/tests/compose/docker-compose.yml
@@ -16,5 +16,5 @@ services:
       - -c
       - |
         set -ex
-        node_modules/.bin/probot receive -e deployment_protection_rule -p fixtures/deployment_protection_rule.requested.json ./lib/index.js
+        # node_modules/.bin/probot receive -e deployment_protection_rule -p fixtures/deployment_protection_rule.requested.json ./lib/index.js
         node_modules/.bin/probot receive -e pull_request_review -p fixtures/pull_request_review.submitted.json ./lib/index.js
