Add has_valid_signatures condition
This condition only checks the GitHub verification
property of the related commits, and does not require
any specific team membership policy.

Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/tests/fixtures/policy-configs/has-valid-signatures-by.yml
+++ b/tests/fixtures/policy-configs/has-valid-signatures-by.yml
@@ -7,7 +7,10 @@ policy:
 approval_rules:
   - name: has valid signatures by test-users
     if:
-      # Checks signatures on all the commits in the pull request
+      # "has_valid_signatures_by" is satisfied when all relevant commits
+      # all have git commit signatures that have been verified by GitHub, and
+      # the authenticated signatures are attributed to a user in the users list
+      # or belong to a user in any of the listed organizations or teams.
       has_valid_signatures_by:
         users: []
         organizations: []
